# Various-Tasks

./: README.md
Task 1/: CMakeLists.txt  ff2.txt  main.cpp
Task 3/: CMakeLists.txt  ReadMe.txt  file.txt  main.cpp  mainwindow.h  mainwindow.ui
Task 3/Machine/: Machine.cpp  Machine.h  UI.cpp  UI.h
Task 3/Machine/CPU/: CPU.cpp  CPU.h
Task 3/Machine/CPU/Alu and Cu/Alu/: Alu.cpp  Alu.h
Task 3/Machine/CPU/Alu and Cu/CU/: CU.cpp  CU.h
Task 3/Machine/CPU/Register/: Register.cpp  Register.h
Task 3/Machine/Memory/: Memory.cpp  Memory.h
Task 3/Vole-machine/: CMakeLists.txt  VoleMachine.cpp  VoleMachine.h  main.cpp
Task 3/assignment1/: mainwindow.cpp  task4.pro
Task 3/assignment1/Machine/: Machine.cpp  Machine.h
Task 3/assignment1/Machine/CPU/: CPU.h
Task 3/assignment1/Machine/CPU/Alu and Cu/CU/: CU.h
Task 3/assignment1/Machine/CPU/Register/: Register.cpp
Task2/: A1_T3_S23_20231109_20230280-20230064 (1) (1) (1) (1).docx  A1_T3_S23_20231109_20230280-20230064 (1) (1) (1).docx  A1_T3_S23_20231109_20230280-20230064.docx  testCode.cpp
Task2/AI_Codes/: Chat_2.cpp  gemini_2.cpp
Task_1/: Readme.md
Task_1/Largest_ID_Student/: main.cpp
Task_1/MIddle_ID_Student/: A1_T1_20230280.cpp  A1_T1_S23_20230280.cpp  CMakeLists.txt  Readme.txt  fatema.cpp  ff2.txt  file10.txt  file11.txt  file4.txt  file5.txt  file8.txt  file9.txt  files6.txt  files7.txt  main.cpp  test.cpp
Task_1/Smallest_ID_Student/: lastedite.cpp  main.cpp
Task_2/: Readme.md  testCode.cpp
Task_2/AI_Codes/: Chat_2.h  gemini_2.cpp  gemini_2.h
Task_3/: CPU.h  UI.cpp  mainwindow.cpp
(+2 files in other folders)
